--- a/src/pages/sol/strain.astro
+++ b/src/pages/sol/strain.astro
@@ -130,7 +130,7 @@ A clip-on device that can measure very small deformations. Two clips attach to a
 
 </SubSubSection>
 
-<SubSubSection title="Classic Strain Gauges">
+<SubSubSection title="Electrical Resistance Strain Gauges">
 
 Small electrical resistors whose resistance charges with strain. Change in resistance can be converted to strain measurement. Often sold as "rosettes", which can measure normal strain in two or more directions. Can be bonded to test specimen.
 
