--- a/src/pages/sta/forcesystems.astro
+++ b/src/pages/sta/forcesystems.astro
@@ -82,7 +82,7 @@ Now we can solve for the center of mass of the distributed load, <InlineEquation
 
 <DisplayEquation equation='\\bar{x} = \\dfrac{M_R}{F_R}\\' />
 
-<Image src='/Statics/ForceSystemsFigures/NonuniformLoad.png' width='5'> Nonuniform load. Need to remake this in the same style as the other pictures.</Image>
+<Image src='/Statics/ForceSystemsFigures/NonuniformLoad.jpg' width='5'> Nonuniform load. Need to remake this in the same style as the other pictures.</Image>
 </SubSubSection>
 
 <!-- from lecture 11 and 12 -->
