--- a/src/pages/sta/free_body_diagrams.astro
+++ b/src/pages/sta/free_body_diagrams.astro
@@ -20,7 +20,7 @@ In this course we assume that a pulley is frictionless, meaning that the magnitu
 
 <DisplayEquation equation='{T_1} = {T_2}\\' />
 
-<Image src='/Statics/FBDFigures/PulleyAssumptions.png' width='3'><BlueText>Taken from TAM 210 Lecture 5 - Slide 6</BlueText></Image>
+<Image src='/Statics/FBDFigures/PulleyAssumptions.jpg' width='3'></Image>
 
 </SubSection>
 
@@ -32,7 +32,7 @@ In this course, we assume springs are linearly elastic, which means that the for
 
 <DisplayEquation equation='{s} = {l-l_0}\\' />
 
-<Image src='/Statics/FBDFigures/SpringAssumptions.png' width='2'><BlueText>Taken from TAM 210 Lecture 5 - Slide 7. Make this picture and put it next to a stress-strain curve with the straight linear elastic line and the slope as k.</BlueText></Image>
+<Image src='/Statics/FBDFigures/SpringAssumptions.jpg' width='2'></Image>
 
 </SubSection>
 
@@ -40,7 +40,7 @@ In this course, we assume springs are linearly elastic, which means that the for
 
 If a surface is described as "smooth", we assume that there is no frictional force on the surface. Therefore, any force applied by the surface is normal to the surface. 
 
-<Image src='/Statics/FBDFigures/SmoothAssumptions.png' width='3'><BlueText>Taken from TAM 210 Lecture 5 - Slide 8. This could become an interactive image eventually where the angles of the surfaces are changed by the user and then the reaction forces are also changing.</BlueText></Image>
+<Image src='/Statics/FBDFigures/SmoothAssumptions.jpg' width='3'><BlueText>Taken from TAM 210 Lecture 5 - Slide 8. This could become an interactive image eventually where the angles of the surfaces are changed by the user and then the reaction forces are also changing.</BlueText></Image>
 
 <!-- \subsection{\red{Equivalent force systems}} -->
 <!-- lecture 10 -->
