--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -31,9 +31,18 @@ Static friction is the friction between two bodies when there is no movement bet
 
 <SubSection title="Tipping vs. Slipping">
 
-<Image src='/Statics/FrictionFigures/TipSlip.png' width='5'><BlueText>Taken from TAM 210 Lecture 27</BlueText></Image>
+<Image src='/Statics/FrictionFigures/TipSlip.jpg' width='5'><BlueText>Adapted from TAM 210 Lecture 27</BlueText></Image>
 
+<p>
+To solve for X (the location of the normal force), one can write the equations of equilibrium.
+</p>
+
+<p>
+<em>Note:</em> See below for an explanation of why the normal force does not act at the center of mass of the box.
+</p>
 <!-- From Lecture 27 -->
+
+<Image src='/Statics/FrictionFigures/NLocation.jpg' width='4'><BlueText>Adapted from TAM 210 Lecture 26</BlueText></Image>
 </SubSection>
 
 </Layout>
