--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -21,7 +21,9 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 <BlueText>From TAM212 Reference Pages (Vectors and Bases):</BlueText>
 
+<p>
 A <em>vector</em> is an arrow with a length and a direction. Just like positions, vectors exist before we measure or describe them. Unlike positions, vectors can mean many different things, such as position vectors, velocities, etc. Vectors are not anchored to particular positions in space, so we can slide a vector around and locate it at any position.
+</p>
 
 <Image src='/Statics/VectorsScalarsFigures/VectorDef.png' width='4'><BlueText>Taken from TAM212 Reference Pages (Vectors and Bases)</BlueText></Image>
 
@@ -29,7 +31,9 @@ A <em>vector</em> is an arrow with a length and a direction. Just like positions
 
 <SubSubSection title="Scalars">
 
+<p>
 While a vector represents magnitude and direction, a <em>scalar</em> is a number that represents a magnitude, but with no directional information. Some examples of scalar quantities can be mass, length, time, speed, or temperature. 
+</p>
 
 </SubSubSection>
 
@@ -39,7 +43,9 @@ While a vector represents magnitude and direction, a <em>scalar</em> is a number
 
 <BlueText>Taken from TAM212 Reference Pages (Vectors and Bases)</BlueText>
 
+<p>
 Vectors can be multiplied by a scalar number, which multiplies their length. 
+</p>
 
 <Image src='/Statics/VectorsScalarsFigures/VecScaling.png' width='4'><BlueText>Taken from TAM212 Reference Pages (Vectors and Bases). Don't include the a+b vector - only keep one a and one b vector with their scaled counterparts.</BlueText></Image>
 
@@ -49,7 +55,9 @@ Vectors can be multiplied by a scalar number, which multiplies their length.
 
 <BlueText>From TAM212 Reference Pages (Vectors and Bases):</BlueText>
 
+<p>
 Vectors can be added or subtracted together, using the parallelogram law of addition or the head-to-tail rule.
+</p>
 
 <Image src='/Statics/VectorsScalarsFigures/VecAddition.png' width='2'><BlueText>Taken from TAM212 Reference Pages (Vectors and Bases). Only include the left part of the figure, and add another part on the right that shows a-b.</BlueText></Image>
 
@@ -63,21 +71,26 @@ Vectors can be added or subtracted together, using the parallelogram law of addi
 
 <SubSection title="Vector Magnitude and Direction">
 
+<p>
 Vectors can be written as a magnitude (length) multiplied by the unit vector in the same direction as the original vector. 
+</p>
 
 <DisplayEquation equation='\\vec{A} = \\|\\vec{A}\\|  \\hat{u_A}\\' />
 
 <BlueText>Insert the same content here as from the TAM212 Reference Pages (Vectors and Bases - Length of Vectors) for vector magnitude.</BlueText>
 
+<p>
 The direction of a vector can be written as a unit vector by dividing the vector components by the vector magnitude. 
+</p>
 
-<Image src='/Statics/VectorsScalarsFigures/UnitVec.png' width='2'><BlueText>Taken from TAM210 Lecture Notes - Slide 3</BlueText></Image>
+<Image src='/Statics/VectorsScalarsFigures/UnitVec.jpg' width='4'><BlueText>Taken from TAM210 Lecture 03 Notes - Slide 3</BlueText></Image>
 
+<p>
 Alternatively, the vector components can be determined geometrically via the angles of each component with respect to the Cartesian coordinates. 
+</p>
 
 <BlueText>Can probably make some sort of interactive figure here based on the image from TAM 210 lecture notes - slide 4</BlueText>
 
-<Image src='/Statics/VectorsScalarsFigures/UnitVecAngles.png' width='3'><BlueText>Taken from TAM210 Lecture Notes - Slide 4</BlueText></Image>
 </SubSection>
 
 <SubSection title="Scalar and Vector Products"></SubSection>
@@ -88,9 +101,12 @@ Alternatively, the vector components can be determined geometrically via the ang
 
 </SubSubSection>
 
-<SubSubSection title="<RedText>Cross Product</RedText>">
+<SubSubSection title="Cross Product">
 
-<RedText>Add something here about the three dimensional cross product?</RedText>
+<p>Formula for a cross product:</p>
+<Image src='/Statics/VectorsScalarsFigures/UnitVecAngles.jpg' width='8'><BlueText>Taken from TAM210 Lecture 03 Notes - Slide 4</BlueText></Image>
+
+<Image src='/Statics/VectorsScalarsFigures/CrossProduct.jpg' width='8' /> 
 
 <BlueText>Insert the same content here as from the TAM212 Reference Pages (Vectors and Bases - Cross Product).</BlueText>
 
